--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
         <li>NVDA</li>
         <li>HCP</li>
         <li>ATT</li>
-          
       </ul>
-      <video></video>
     </div>
     <div id="stockdistribution">
       <h2></h2>
@@ -55,6 +53,11 @@
     <div id="dividends">
       <h2></h2>
       <p></p>
+      <ul>
+          <li>Dividend 00</li>
+          <li>Dividend 01</li>
+          <li>Dividend 02</li>
+      </ul>
     </div>
     <footer>
       <p></p>
