--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div id="stocklist">
-      <h2></h2>
+      <h2>Porfolio composition</h2>
       <p></p>
       <ul>
         <li>NVDA</li>
@@ -28,14 +28,16 @@
       </ul>
     </div>
     <div id="stockdistribution">
-      <h2></h2>
-      <p>Distribution of your portfolio</p>
+      <h2>Distribution of your portfolio</h2>
+      <p></p>
+    <!--
       <div id="images">
-        <img>
+       <img>
       </div>
+    -->
     </div>
     <div id="markets">
-      <h2></h2>
+      <h2>Markets</h2>
       <p></p>
       <ul>
           <li>Market 00</li>
@@ -51,7 +53,7 @@
     </div>
     
     <div id="dividends">
-      <h2></h2>
+      <h2>Dividends</h2>
       <p></p>
       <ul>
           <li>Dividend 00</li>
